--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	<meta name="DC.Format" content="text/html/CSS/JS">
   	<meta name="DC.Language" content="it">
   	<meta name="DC.Source" content="Bootstrap, w3school, knightlab">
-  	<meta name="DC.Identifier" href="file:///Users/agnese/Desktop/Digital%20humanities%20(Tomasi)/sito-html/index.html">
+  	<meta name="DC.Identifier" href="https://agnese19.github.io">
   	<meta name="DC.Rights" content="Rilasciato con licenza Creative Commons CC0 1.0 DEED">
   	<!--viewport per la visualizzazione su diversi device-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
