--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 	<!--prefooter e footer-->
 	<section>
-		<div class="pre-footer">Alma Mater Studiorum – Università di Bologna 
+		<div class="pre-footer">Alma Mater Studiorum - Università di Bologna 
 			<br>
 		    Credits | Licenze
 		</div>
