--- a/archivio.html
+++ b/archivio.html
@@ -127,7 +127,7 @@
 
 	<!--prefooter e footer-->
 	<section>
-		<div class="pre-footer">Alma Mater Studiorum – Università di Bologna 
+		<div class="pre-footer">Alma Mater Studiorum - Università di Bologna 
 		<br>
 		Credits | Licenze
 		</div>
