--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it–IT">
+<html lang="it-IT">
 <head> 
 	<title> La scrivania di Arnoldo Mondadori </title>
 	<link rel="icon" type="image/x-icon" href="Img/Layout/logo.png">
@@ -106,14 +106,14 @@
 				<h2>Enti promotori</h2>
 				<br>
 				<div class="flex-container">
-					<a href="https://www.aie.it" target="_blank"><img src="Img/Layout/Loghi/AIE_logo.png" alt="Vai al sito dell'AIE"></a>
-			        <a href="https://www.comune.milano.it" target="_blank"><img src="Img/Layout/Loghi/ComuneMilano_logo.webp" alt="Vai al sito del Comune di Milano"></a>
-			        <a href="https://www.fondazionemondadori.it" target="_blank"><img src="Img/Layout/Loghi/FondazioneMondadori_logo.jpeg" alt="Vai al sito della Fondazione Arnoldo e Alberto Mondadori"></a>
+					<a href="https://www.fondazionemondadori.it" target="_blank"><img src="Img/Layout/Loghi/FondazioneMondadori_logo.jpeg" alt="Vai al sito della Fondazione Arnoldo e Alberto Mondadori"></a>
+					<a href="https://www.beniculturali.it" target="_blank"><img src="Img/Layout/Loghi/Mibac_logo.jpeg" alt="Vai al sito del Ministero della Cultura"></a>
+					<a href="https://www.unibo.it/it" target="_blank"><img src="Img/Layout/Loghi/Unibo_logo.png" alt="Vai al sito dell'Università di Bologna"></a>
+					<a href="https://www.mondadori.it" target="_blank"><img src="Img/Layout/Loghi/Mondadori_logo.jpeg" alt="Vai al sito di Mondadori"></a>
 			       	<a href="https://www.giornaledellalibreria.it" target="_blank"><img src="Img/Layout/Loghi/GdL_logo.jpeg" alt="Vai al sito del Giornale della Libreria"></a>
-			        <a href="https://www.beniculturali.it" target="_blank"><img src="Img/Layout/Loghi/Mibac_logo.jpeg" alt="Vai al sito del Ministero della Cultura"></a>
-			        <a href="https://www.mondadori.it" target="_blank"><img src="Img/Layout/Loghi/Mondadori_logo.jpeg" alt="Vai al sito di Mondadori"></a>
+					<a href="https://www.aie.it" target="_blank"><img src="Img/Layout/Loghi/AIE_logo.png" alt="Vai al sito dell'AIE"></a>
 			       	<a href="https://www.regione.lombardia.it/wps/portal/istituzionale/" target="_blank"><img src="Img/Layout/Loghi/RegioneLombardia_logo.png" alt="Vai al sito della Regione Lombardia"></a>
-			        <a href="https://www.unibo.it/it" target="_blank"><img src="Img/Layout/Loghi/Unibo_logo.png" alt="Vai al sito dell'Università di Bologna"></a>
+					<a href="https://www.comune.milano.it" target="_blank"><img src="Img/Layout/Loghi/ComuneMilano_logo.webp" alt="Vai al sito del Comune di Milano"></a>
 			    </div>
 	        </div>
 		</div>
