--- a/Sezione_autori.html
+++ b/Sezione_autori.html
@@ -233,7 +233,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1947-05-20" data-author="mann">
-				      <img src="Img/items/Arnoldo_Mann_20.05.47_tel.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/items/Arnoldo_Mann_20.05.47.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Mann_TG.08</h5>
 				        <p class="card-text">
