--- a/Item.html
+++ b/Item.html
@@ -154,7 +154,7 @@
 				<div class="col m-auto">
 					<h5>Download file xml/TEI</h5>
 					<div class="d-flex justify-content-center">
-						<a href="" class="download" target="_blank" title="download XML/TEI"><i class="bi bi-filetype-xml"></i></a>
+						<a href="xml/TEI.xml" class="download" target="_blank" title="download XML/TEI"><i class="bi bi-filetype-xml"></i></a>
 					</div>
 				</div>
 				<!--potrebbe interessarti-->
