--- a/Item.html
+++ b/Item.html
@@ -17,12 +17,12 @@
   	<meta name="DC.Format" content="text/html/CSS/JS">
   	<meta name="DC.Language" content="it">
   	<meta name="DC.Source" content="Bootstrap, w3school, knightlab">
-  	<meta name="DC.Identifier" href="file:///Users/agnese/Desktop/Digital%20humanities%20(Tomasi)/sito-html/index.html">
+  	<meta name="DC.Identifier" href="https://agnese19.github.io">
   	<meta name="DC.Rights" content="Rilasciato con licenza Creative Commons CC0 1.0 DEED">
   	<!--viewport per la visualizzazione su diversi device-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" href="style/fogliostile.css"/>
-	<!--link a CSS da Bootstrap-->
+	<!--link a CSS Bootstrap-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<!--link per le icone-->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
