--- a/Item.html
+++ b/Item.html
@@ -157,6 +157,12 @@
 						<a href="xml/TEI.xml" class="download" target="_blank" title="download XML/TEI"><i class="bi bi-filetype-xml"></i></a>
 					</div>
 				</div>
+				<div class="col m-auto">
+					<h5>Download file xml/RDF</h5>
+					<div class="d-flex justify-content-center">
+						<a href="xml/RDF.xml" class="download" target="_blank" title="download XML/RDF"><i class="bi bi-filetype-xml"></i></a>
+					</div>
+				</div>
 				<!--potrebbe interessarti-->
 				<div class="col">
 					<h5>Potrebbe interessarti anche:</h5>
