--- a/archivio.html
+++ b/archivio.html
@@ -57,7 +57,7 @@
 	<nav class="navbc">
 		<ul class="breadcrumb">
 		  <li><a href="index.html">Home</a></li>
-		  <li><a href="Archivio.html">Archivio</a></li>
+		  <li><a href="archivio.html">Archivio</a></li>
 		</ul>
 	</nav>
 
