--- a/Item.html
+++ b/Item.html
@@ -58,7 +58,7 @@
 	<nav class="navbc">
 		<ul class="breadcrumb">
 		  <li><a href="index.html">Home</a></li>
-		  <li><a href="Archivio.html">Archivio</a></li>
+		  <li><a href="archivio.html">Archivio</a></li>
 		  <li><a href="Sezione_autori.html">Corrispondenza con gli autori</a></li>
 		  <li><a href="Item.html">CA_Mondadori_Buzzati_L.ds.01</a></li>
 		</ul>
