--- a/archivio.html
+++ b/archivio.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-<!--header-->
+	<!--header-->
 	<header class="titolo">
 		<div class="immagine-sfondo">
 			<div class="testo-scrivania">
@@ -43,7 +43,7 @@
 	  <div class="container-fluid">
 	    <a class="navbar-brand" href="index.html" class="active">Home</a>
 	    <a class="navbar-brand" href="#">Biografia</a>
-	    <a class="navbar-brand" href="Archivio.html">Archivio</a>
+	    <a class="navbar-brand" href="archivio.html">Archivio</a>
 	    <a class="navbar-brand" href="#">Galleria</a>
 	    <a class="navbar-brand" href="#">Fonti</a>
 	    <form class="example" action="action_page.php">
