--- a/archivio.html
+++ b/archivio.html
@@ -41,11 +41,12 @@
 	<!--barra di navigazione sticky top da bootstrap-->
 	<nav class="navbar sticky-top">
 	  <div class="container-fluid">
-	    <a class="navbar-brand" href="index.html" class="active">Home</a>
+		<a class="navbar-brand" href="index.html" class="active">Home</a>
 	    <a class="navbar-brand" href="#">Biografia</a>
 	    <a class="navbar-brand" href="archivio.html">Archivio</a>
-	    <a class="navbar-brand" href="#">Galleria</a>
-	    <a class="navbar-brand" href="#">Fonti</a>
+		<a class="navbar-brand" href="#">Indici</a>
+		<a class="navbar-brand" href="#">Fonti</a>
+	    <a class="navbar-brand" href="#">Galleria fotografica</a>
 	    <form class="example" action="action_page.php">
 		  <input type="text" placeholder="Search..." name="search">
 		  <button type="submit"><i class="fa fa-search"></i></button>
