--- a/Item.html
+++ b/Item.html
@@ -143,25 +143,25 @@
 				<div class="col m-auto">
 					<h5>Download trascrizione .txt</h5>
 					<div class="d-flex justify-content-center">
-						<a href="Item.txt" target="_blank" title="download.txt" class="download"><i class="bi bi-filetype-txt"></i></a>
+						<a href="Item.txt" target="_blank" title="download TXT" class="download"><i class="bi bi-filetype-txt"></i></a>
 					</div>
 				</div>
 				<div class="col m-auto">
 					<h5>Download file xml/DC</h5>
 					<div class="d-flex justify-content-center">
-						<a href="xml/DC.xml" class="download" target="_blank" title="download XML/DC"><i class="bi bi-filetype-xml"></i></a>
+						<a href="xml/DC.xml" class="download" target="_blank" title="download DC/XML"><i class="bi bi-filetype-xml"></i></a>
 					</div>
 				</div>
 				<div class="col m-auto">
 					<h5>Download file xml/TEI</h5>
 					<div class="d-flex justify-content-center">
-						<a href="xml/TEI.xml" class="download" target="_blank" title="download XML/TEI"><i class="bi bi-filetype-xml"></i></a>
+						<a href="xml/TEI.xml" class="download" target="_blank" title="download TEI/XML"><i class="bi bi-filetype-xml"></i></a>
 					</div>
 				</div>
 				<div class="col m-auto">
 					<h5>Download file xml/RDF</h5>
 					<div class="d-flex justify-content-center">
-						<a href="xml/RDF.xml" class="download" target="_blank" title="download XML/RDF"><i class="bi bi-filetype-xml"></i></a>
+						<a href="RDF.ttl" class="download" target="_blank" title="download RDF/TTL"><i class="bi bi-file-earmark"></i></a>
 					</div>
 				</div>
 				<!--potrebbe interessarti-->
