--- a/Item.html
+++ b/Item.html
@@ -61,7 +61,7 @@
 		  <li><a href="index.html">Home</a></li>
 		  <li><a href="archivio.html">Archivio</a></li>
 		  <li><a href="Sezione_autori.html">Corrispondenza con gli autori</a></li>
-		  <li><a href="Item.html">CA_Mondadori_Buzzati_L.ds.01</a></li>
+		  <li><a href="Item.html">CA_Mondadori_Buzzati_Lds.01</a></li>
 		</ul>
 	</nav>
 
@@ -71,7 +71,7 @@
 		<div class="box metadati">
 			<h1>Metadati</h1>
 			<ul class="meta">
-				<li><b>Codice item:</b> CA_Mondadori_Buzzati_L.ds.01</li>
+				<li><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</li>
 				<li><b>Data:</b> 1946-10-30</li>
 				<li><b>Luogo:</b> Milano</li>
 				<li><b>Mittente:</b> Arnoldo Mondadori</li>
