--- a/Sezione_autori.html
+++ b/Sezione_autori.html
@@ -100,7 +100,7 @@
 				    <div class="card h-100 shadow" data-date="1946-10-30" data-author="buzzati">
 				      <img src="Img/Items/Arnoldo_Buzzati_30.10.46.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_L.ds.01</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1946-10-30
 				        	<br>
@@ -134,7 +134,7 @@
 				    <div class="card h-100 shadow" data-date="1956-06-12" data-author="decespedes">
 				      <img src="Img/Items/Arnoldo_DeCespedes_12.06.56.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_DeCespedes_L.ds.04</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_DeCespedes_Lds.04</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1956-06-12
 				        	<br>
@@ -151,7 +151,7 @@
 				    <div class="card h-100 shadow" data-date="1958-01-16" data-author="decespedes">
 				      <img src="Img/Items/Arnoldo_DeCespedes_16.01.58.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_DeCespedes_L.ds.09</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_DeCespedes_Lds.09</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1958-01-16
 				        	<br>
@@ -168,7 +168,7 @@
 				    <div class="card h-100 shadow" data-date="1948-10-07" data-author="hemingway">
 				      <img src="Img/Items/Arnoldo_Hemingway_7.10.48.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Hemingway_L.ds.03</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Hemingway_Lds.03</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1948-10-07
 				        	<br>
@@ -185,7 +185,7 @@
 				    <div class="card h-100 shadow" data-date="1946-06-01" data-author="mazzucchetti">
 				      <img src="Img/Items/Mazzucchetti_Arnoldo_1.06.46.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Mazzucchetti_Mondadori_L.ms.18</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Mazzucchetti_Mondadori_Lms.18</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1946-06-01
 				        	<br>
@@ -202,7 +202,7 @@
 				    <div class="card h-100 shadow" data-date="1947-04-09" data-author="mann">
 				      <img src="Img/Items/Arnoldo_Mann_9.04.47.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Mann_L.ds.11</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Mann_Lds.11</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1947-04-09
 				        	<br>
@@ -219,7 +219,7 @@
 				    <div class="card h-100 shadow" data-date="1947-02-23" data-author="remarque">
 				      <img src="Img/Items/Remarque_Arnoldo_23.02.47.jpeg" class="card-img-top" alt="...">
 				      <div class="card-body">
-				        <h5 class="card-title"><b>Codice item:</b> CA_Remarque_Mondadori_L.ds.01</h5>
+				        <h5 class="card-title"><b>Codice item:</b> CA_Remarque_Mondadori_Lds.01</h5>
 				        <p class="card-text">
 				        	<b>Data:</b> 1947-02-23
 				        	<br>
