--- a/archivio.html
+++ b/archivio.html
@@ -104,18 +104,18 @@
 				</div>
 			</div>
 			<div class="col-md-3">
-				<div class="card shadow" data-date="1947-04-09" data-author="mann">
-				    <img src="Img/Items/Arnoldo_Mann_9.04.47.jpeg" class="card-img-top" alt="...">
+				<div class="card shadow" data-date="1946-10-30" data-author="buzzati">
+				    <img src="Img/Items/Arnoldo_Buzzati_30.10.46.jpeg" class="card-img-top" alt="...">
 				    <div class="card-body">
-				       <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Mann_L.ds.11</h5>
+				       <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</h5>
 				       <p class="card-text">
-				        	<b>Data:</b> 1947-04-09
-				        	<br>
-				        	<b>Mittente:</b> Arnoldo Mondadori
-				        	<br>
-				        	<b>Destinatario:</b> Thomas Mann
+							<b>Data:</b> 1946-10-30
+							<br>
+							<b>Mittente:</b> Arnoldo Mondadori
+							<br>
+							<b>Destinatario:</b> Dino Buzzati
 				       </p>
-				       <button class="btn-custom" type="button"><a href="#">Vai all'ultimo item visitato</a></button>
+				       <button class="btn-custom" type="button"><a href="#">Vai all'ultimo item inserito</a></button>
 				    </div>
 				</div>
 			</div>
