--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 <body>
 	<!--header-->
 	<header class="titolo">
-		<div class="immagine-sfondo">
-			<div class="testo-scrivania">
+		<div class="bg-image">
+			<div class="scrivania">
 				<h1>La scrivania di Arnoldo Mondadori</h1>
 			</div>
 		</div>
