--- a/archivio.html
+++ b/archivio.html
@@ -71,6 +71,10 @@
 				<br>
 				Per ogni documento è presente una versione digitale e la relativa trascrizione.
 			</p>
+			<div>
+				<button class="btn-custom" type="button"><a href="#">Esplora per Indici</a></button>
+				<button class="btn-custom" type="button"><a href="#">Consulta le Fonti</a></button>
+			</div>
 		</div>
 	</section>
 
