--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<!--sezione uno-->
 	<section class="timeline">
 		<div>
-			<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1vuaRZxjJuYOczjdjstw9BB_490exTMZaQxnYlLNOCEA&font=Default&lang=en&initial_zoom=2&height=550' width='100%' height='550' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+			<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17-xBBBr3zaDZtnS9b29v63IEyNUG6UdQdOW4xx7tK7s&font=Default&lang=it&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 		</div>
 	</section>
 	
@@ -71,7 +71,7 @@
 			<br>
 			<div>
 				<button class="btn-custom" type="button"><a href="archivio.html">Esplora l'Archivio</a></button>
-				<button class="btn-custom" type="button"><a href="#">Scopri le Fonti</a></button>
+				<button class="btn-custom" type="button"><a href="#">Consulta le Fonti</a></button>
 			</div>
 		</div>
 	</section>
