--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		<div class="box">
 			<h1> Il progetto </h1>
 			<p>
-				<i>La scrivania di Arnoldo Mondadori</i> nasce per raccogliere in un unico luogo tutti i documenti d'archivio passati sotto l'occhio dello storico editore milanese. L'obiettivo del progetto è rendere accessibili a tutti, in formato digitale, lettere, contratti, pareri editoriali e tante altre tipologie di documenti che possono aiutare a dipingere un quadro più completo della figura di Arnoldo Mondadori e del suo rapporto con tutti quei collaboratori, autori, amici e colleghi che hanno contribuito alla costruzione del suo impero editoriale.
+				<i>La scrivania di Arnoldo Mondadori</i> nasce per raccogliere in un unico archivio tutti i documenti passati tra le mani e sotto gli occhi dello storico editore milanese durante i suoi anni di presidenza presso la casa editrice da lui fondata. L'obiettivo del progetto è rendere accessibili a tutti, in formato digitale, lettere, contratti, pareri editoriali e tante altre tipologie di documenti, sia pubblici sia privati, che possono aiutare a dipingere un quadro più completo della figura di Arnoldo Mondadori e del suo rapporto con tutti quei collaboratori, autori, amici e colleghi che hanno contribuito alla costruzione del suo impero editoriale. La novità della raccolta consiste nella possibilità di consultare i singoli documenti nella loro versione digitalizzata, sempre accompagnata da una trascrizione diplomatica del testo, proponendosi così come utile strumento di ricerca e di consultazione per diversi ambiti d'interesse. 
 			</p>
 			<br>
 			<div>
