--- a/archivio.html
+++ b/archivio.html
@@ -69,7 +69,9 @@
 			<p>
 				In questa raccolta sono conservati diversi documenti d'archivio relativi alla vita e alla carriera di Arnoldo Mondadori e alla storia della sua casa editrice. Sono stati suddivisi in base alla tipologia più affine a ciascuno, in modo da consentire una navigazione e una consultazione il più efficiente possibile. All'interno di ogni sezione potrai ordinare cronologicamente i documenti e, dove possibile, filtrare i risultati in base al nome del corrispondente.
 				<br>
-				Per ogni documento è presente una versione digitale e la relativa trascrizione.
+				Per ogni documento è presente una versione digitale e la relativa trascrizione diplomatica.
+				<br>
+				In alternativa alla catalogazione operata per tipologia di documenti, sono anche presenti dei comodi indici che consentono di muoversi tra i materiali raccolti in base alle occorrenze di luoghi, persone, ruoli editoriali e opere citate.
 			</p>
 			<div>
 				<button class="btn-custom" type="button"><a href="#">Esplora per Indici</a></button>
