--- a/archivio.html
+++ b/archivio.html
@@ -105,7 +105,7 @@
 
 				<button class="accordion">Documenti privati</button>
 				<div class="panel">
-				  <p>In questa sezione sono conservate le testimonianze private della vita di Arnoldo che documentano i suoi rapporti con amici e familiari: biglietti di auguri, cartoline, dediche, pagine di diario... e persino scritte sui muri.</p>
+				  <p>In questa sezione sono conservate le testimonianze private della vita di Arnoldo che documentano i suoi rapporti con amici e familiari: biglietti di auguri, cartoline, dediche, pagine di diario... e persino le firme lasciate da diversi conoscenti sulla cappa del camino della villa di Arnoldo Mondadori a Meina.</p>
 				  <button class="btn-custom" type="button"><a href="#">Vai alla sezione</a></button>
 				</div>
 			</div>
