--- a/archivio.html
+++ b/archivio.html
@@ -69,8 +69,6 @@
 			<p>
 				In questa raccolta sono conservati diversi documenti d'archivio relativi alla vita e alla carriera di Arnoldo Mondadori e alla storia della sua casa editrice. Sono stati suddivisi in base alla tipologia più affine a ciascuno, in modo da consentire una navigazione e una consultazione il più efficiente possibile. All'interno di ogni sezione potrai ordinare cronologicamente i documenti e, dove possibile, filtrare i risultati in base al nome del corrispondente.
 				<br>
-				Per ogni documento è presente una versione digitale e la relativa trascrizione diplomatica.
-				<br>
 				In alternativa alla catalogazione operata per tipologia di documenti, sono anche presenti dei comodi indici che consentono di muoversi tra i materiali raccolti in base alle occorrenze di luoghi, persone, ruoli editoriali e opere citate.
 			</p>
 			<div>
@@ -87,25 +85,24 @@
 			<div class="col-md-9">
 				<button class="accordion">Corrispondenza con gli autori</button>
 				<div class="panel">
-				  <p>In questa sezione sono raccolti gli scambi epistolari tra Arnoldo Mondadori e gli scrittori e scrittrici con cui intrattenava relazioni amicali e/o professionali.</p>
+				  <p>In questa sezione sono raccolti gli scambi epistolari tra Arnoldo Mondadori e gli scrittori e scrittrici del panorama italiano e internazionale a lui contemporaneo con i quali l'editore intratteneva non solo rapporti puramente professionali ma anche sincere relazioni amicali.</p>
 				  <button class="btn-custom" type="button"><a href="Sezione_autori.html" target="_blank">Vai alla sezione</a></button>
 				</div>
 
 				<button class="accordion">Comunicazioni interne</button>
 				<div class="panel">
-				  <p>In questa sezione puoi trovare tutti i documenti relativi all'organizzazione interna della casa editrice. Le comunicazioni possono riguardare la nascita di una collana, la campagna pubblicitaria per l'uscita di un nuovo libro, i pareri editoriali dei collaboratori di Arnoldo e altro ancora.</p>
-				  <button class="btn-custom" type="button"><a href="#">Vai alla sezione</a></button>
+				  <p>In questa sezione puoi trovare tutti i documenti relativi all'organizzazione e alla gestione interna della casa editrice, in particolare per quanto concerne l'ambito redazionale. I materiali possono riguardare diverse fasi della catena editoriale e consentono di avere una panoramica piuttosto completa degli ambienti, delle figure professionali e dei processi di filiera che danno vita a una casa editrice come la Mondadori, dalla sua fondazione agli anni di produzione più fervidi.</p>
 				</div>
 
 				<button class="accordion">Contratti e trattative</button>
 				<div class="panel">
-				  <p>Questa è la sezione di carattere burocratico e finanziario, nella quale sono stati riuniti i bilanci, i contratti, i registri contabili, le trattative commerciali di vario genere gestite da Arnoldo Mondadori e dai suoi uffici.</p>
+				  <p>In questa sezione sono stati riuniti documenti come bilanci, contratti, registri contabili, trattative commerciali e altri materiali di carattere più spiccatamente burocratico e finanziario gestiti da Arnoldo Mondadori e dai suoi uffici.</p>
 				  <button class="btn-custom" type="button"><a href="#">Vai alla sezione</a></button>
 				</div>
 
 				<button class="accordion">Documenti privati</button>
 				<div class="panel">
-				  <p>In questa sezione sono conservate le testimonianze private della vita di Arnoldo che documentano i suoi rapporti con amici e familiari: biglietti di auguri, cartoline, dediche, pagine di diario... e persino le firme lasciate da diversi conoscenti sulla cappa del camino della villa di Arnoldo Mondadori a Meina.</p>
+				  <p>In questa sezione sono conservate le testimonianze private della vita di Arnoldo che documentano i suoi rapporti con amici e familiari: biglietti di auguri, cartoline, dediche, pagine di diario... e persino le firme lasciate da diversi conoscenti sul camino della famosa villa Mondadori a Meina.</p>
 				  <button class="btn-custom" type="button"><a href="#">Vai alla sezione</a></button>
 				</div>
 			</div>
