--- a/Item.html
+++ b/Item.html
@@ -72,17 +72,17 @@
 			<h1>Metadati</h1>
 			<ul class="meta">
 				<li><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</li>
-				<li><b>Data:</b> 1946-10-30</li>
-				<li><b>Luogo:</b> Milano</li>
+				<li><b>Tipologia di documento:</b> Lettera dattiloscritta</li>
 				<li><b>Mittente:</b> Arnoldo Mondadori</li>
 				<li><b>Destinatario:</b> Dino Buzzati</li>
+				<li><b>Data:</b> 1946-10-30</li>
+				<li><b>Luogo:</b> Milano</li>
 				<li><b>Lingua:</b> Italiano</li>
-				<li><b>Tipologia documento:</b> Lettera dattiloscritta</li>
-				<li><b>Supporto:</b> Foglio A4</li>
 				<li><b>Fonte:</b> Archivio storico Arnoldo Mondadori Editore (AME), sezione Arnoldo Mondadori, fascicolo Dino Buzzati</li>
-				<li><b>Oggetto:</b> Invito a scrivere un nuovo libro</li>
-				<li><b>Parole chiave:</b></li>
-				<li><b>Note:</b></li>
+				<li><b>Supporto:</b> Foglio A4</li>
+				<li><b>Contenuto:</b> Esortazione a scrivere un nuovo libro</li>
+				<li><b>Parole chiave:</b> "Il deserto dei Tartari"; "I sette messaggeri"; terra di importazione; rinnovamento letterario italiano; </li>
+				<li><b>Note:</b> – </li>
 			</ul>
 		</div>
 	</section>
