--- a/Item.html
+++ b/Item.html
@@ -137,7 +137,7 @@
 		</div>
 	</section>
 
-		<!--file xml scaricabili e altri contenuti utili-->
+	<!--file xml scaricabili e altri contenuti utili-->
 	<section class="container-fluid my-5">
 		<div class="row mx-4">
 				<div class="col m-auto">
@@ -164,7 +164,7 @@
 						<a href="RDF.ttl" class="download" target="_blank" title="download RDF/TTL"><i class="bi bi-file-earmark"></i></a>
 					</div>
 				</div>
-				<!--potrebbe interessarti-->
+				<!--potrebbe interessarti: documento affine per corrispondente-->
 				<div class="col">
 					<h5>Potrebbe interessarti anche:</h5>
 					<div class="card shadow" data-date="1965-05-25" data-author="buzzati">
