--- a/Item.html
+++ b/Item.html
@@ -73,8 +73,8 @@
 			<ul class="meta">
 				<li><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</li>
 				<li><b>Tipologia di documento:</b> Lettera dattiloscritta</li>
-				<li><b>Mittente:</b> Arnoldo Mondadori<span></span><a href="https://opac.sbn.it/risultati-autori/-/opac-autori/detail/ITICCUCUBV013007?core=autori&item%3A6003%3ANome=Arnoldo+Mondadori&_cacheid=bc%3D1" target="_blank"><i class="bi bi-caret-right"></i>Scheda di autorità</a></span></li>
-				<li><b>Destinatario:</b> Dino Buzzati<span><a href="https://opac.sbn.it/risultati-autori/-/opac-autori/detail/CFIV007701" target="_blank"><i class="bi bi-caret-right"></i>Scheda di autorità</a></span></li>
+				<li><b>Mittente:</b> Arnoldo Mondadori<span></span><a href="https://opac.sbn.it/risultati-autori/-/opac-autori/detail/ITICCUCUBV013007?core=autori&item%3A6003%3ANome=Arnoldo+Mondadori&_cacheid=bc%3D1" target="_blank"><i class="bi bi-arrow-bar-right"></i>Scheda di autorità</a></span></li>
+				<li><b>Destinatario:</b> Dino Buzzati<span><a href="https://opac.sbn.it/risultati-autori/-/opac-autori/detail/CFIV007701" target="_blank"><i class="bi bi-arrow-bar-right"></i>Scheda di autorità</a></span></li>
 				<li><b>Data:</b> 1946-10-30</li>
 				<li><b>Luogo:</b> Milano</li>
 				<li><b>Lingua:</b> Italiano</li>
