--- a/Item.html
+++ b/Item.html
@@ -81,7 +81,7 @@
 				<li><b>Fonte:</b> Archivio storico Arnoldo Mondadori Editore (AME), sezione Arnoldo Mondadori, fascicolo Dino Buzzati</li>
 				<li><b>Supporto:</b> Foglio A4</li>
 				<li><b>Contenuto:</b> Esortazione a scrivere un nuovo libro</li>
-				<li><b>Parole chiave:</b> "Il deserto dei Tartari"; "I sette messaggeri"; terra di importazione; rinnovamento letterario italiano; </li>
+				<li><b>Parole chiave:</b> "Il deserto dei Tartari"; "I sette messaggeri"; terra di importazione; rinnovamento letterario italiano. </li>
 				<li><b>Note:</b> – </li>
 			</ul>
 		</div>
