--- a/Item.html
+++ b/Item.html
@@ -130,7 +130,7 @@
 							<b>30</b> Milano <br>
 							</span>
 						</p>
-						<button onclick="ReadMore()" id="Btn">Read more</button>
+						<button onclick="ReadMore()" id="Btn">Leggi di più</button>
 					</div>
 				</div>
 			</div>
