--- a/archivio.html
+++ b/archivio.html
@@ -92,6 +92,7 @@
 				<button class="accordion">Comunicazioni interne</button>
 				<div class="panel">
 				  <p>In questa sezione puoi trovare tutti i documenti relativi all'organizzazione e alla gestione interna della casa editrice, in particolare per quanto concerne l'ambito redazionale. I materiali possono riguardare diverse fasi della catena editoriale e consentono di avere una panoramica piuttosto completa degli ambienti, delle figure professionali e dei processi di filiera che danno vita a una casa editrice come la Mondadori, dalla sua fondazione agli anni di produzione più fervidi.</p>
+				  <button class="btn-custom" type="button"><a href="#">Vai alla sezione</a></button>
 				</div>
 
 				<button class="accordion">Contratti e trattative</button>
