--- a/archivio.html
+++ b/archivio.html
@@ -70,10 +70,12 @@
 				In questa raccolta sono conservati diversi documenti d'archivio relativi alla vita e alla carriera di Arnoldo Mondadori e alla storia della sua casa editrice. Sono stati suddivisi in base alla tipologia più affine a ciascuno, in modo da consentire una navigazione e una consultazione il più efficiente possibile. All'interno di ogni sezione potrai ordinare cronologicamente i documenti e, dove possibile, filtrare i risultati in base al nome del corrispondente.
 				<br>
 				In alternativa alla catalogazione per tipologia di documenti, sono disponibili dei comodi indici che consentono di muoversi tra i materiali raccolti in base alle occorrenze di luoghi, persone, ruoli editoriali e opere citate.
+				<br>
+				Per avere informazioni riguardo ai principi seguiti per la catalogazione dei documenti e alle norme adottate per l'indicizzazione, la trascrizione e la marcatura dei testi si rimanda alla Nota filologica.
 			</p>
 			<div>
 				<button class="btn-custom" type="button"><a href="#">Esplora per Indici</a></button>
-				<button class="btn-custom" type="button"><a href="#">Consulta le Fonti</a></button>
+				<button class="btn-custom" type="button"><a href="#">Nota filologica</a></button>
 			</div>
 		</div>
 	</section>
