--- a/Sezione_autori.html
+++ b/Sezione_autori.html
@@ -18,7 +18,8 @@
   	<meta name="DC.Language" content="it">
   	<meta name="DC.Source" content="Bootstrap, w3school, knightlab">
   	<meta name="DC.Identifier" href="https://agnese19.github.io">
-  	<meta name="DC.Rights" content="Rilasciato con licenza Creative Commons CC0 1.0 DEED">
+  	<meta name="DC.Rights" content="Quest'opera è rilasciata sotto la Licenza Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0).">
+    <meta name="DC.Rights" content="https://creativecommons.org/licenses/by-nc-nd/4.0/">
   	<!--viewport per la visualizzazione su diversi device-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<link rel="stylesheet" href="style/fogliostile.css"/>
