--- a/archivio.html
+++ b/archivio.html
@@ -89,7 +89,7 @@
 				<button class="accordion">Corrispondenza con gli autori</button>
 				<div class="panel">
 				  <p>In questa sezione sono raccolti gli scambi epistolari tra Arnoldo Mondadori e gli scrittori e scrittrici del panorama italiano e internazionale a lui contemporaneo con i quali l'editore intratteneva non solo rapporti puramente professionali ma anche sincere relazioni amicali.</p>
-				  <button class="btn-custom" type="button"><a href="Sezione_autori.html" target="_blank">Vai alla sezione</a></button>
+				  <button class="btn-custom" type="button"><a href="Sezione_autori.html">Vai alla sezione</a></button>
 				</div>
 
 				<button class="accordion">Comunicazioni interne</button>
