--- a/Item.html
+++ b/Item.html
@@ -160,7 +160,7 @@
 					</div>
 				</div>
 				<div class="col m-auto">
-					<h5>Download file xml/RDF</h5>
+					<h5>Download file ttl/RDF</h5>
 					<div class="d-flex justify-content-center">
 						<a href="RDF.ttl" class="download" target="_blank" title="download RDF/TTL"><i class="bi bi-file-earmark"></i></a>
 					</div>
