--- a/Sezione_autori.html
+++ b/Sezione_autori.html
@@ -99,7 +99,7 @@
 				<div class="row row-cols-1 row-cols-md-3 g-4" id="cardsContainer">
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1946-10-30" data-author="buzzati">
-				      <img src="Img/Items/Arnoldo_Buzzati_30.10.46.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Arnoldo_Buzzati_30.10.46.jpeg" class="card-img-top" alt="Lettera di Mondadori a Buzzati">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</h5>
 				        <p class="card-text">
@@ -116,7 +116,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1965-05-25" data-author="buzzati">
-				    	<img src="Img/Items/Arnoldo_Buzzati_25.05.65.jpeg" class="card-img-top" alt="...">
+				    	<img src="Img/Items/Arnoldo_Buzzati_25.05.65.jpeg" class="card-img-top" alt="Telegramma di Mondadori a Buzzati">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_TG.12</h5>
 				        <p class="card-text">
@@ -133,7 +133,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1956-06-12" data-author="decespedes">
-				      <img src="Img/Items/Arnoldo_DeCespedes_12.06.56.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Arnoldo_DeCespedes_12.06.56.jpeg" class="card-img-top" alt="Lettera di Mondadori a De Cespedes">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_DeCespedes_Lds.04</h5>
 				        <p class="card-text">
@@ -150,7 +150,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1958-01-16" data-author="decespedes">
-				      <img src="Img/Items/Arnoldo_DeCespedes_16.01.58.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Arnoldo_DeCespedes_16.01.58.jpeg" class="card-img-top" alt="Lettera di Mondadori a De Cespedes">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_DeCespedes_Lds.09</h5>
 				        <p class="card-text">
@@ -167,7 +167,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1948-10-07" data-author="hemingway">
-				      <img src="Img/Items/Arnoldo_Hemingway_7.10.48.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Arnoldo_Hemingway_7.10.48.jpeg" class="card-img-top" alt="Lettera di Mondadori a Hemingway">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Hemingway_Lds.03</h5>
 				        <p class="card-text">
@@ -184,7 +184,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1946-06-01" data-author="mazzucchetti">
-				      <img src="Img/Items/Mazzucchetti_Arnoldo_1.06.46.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Mazzucchetti_Arnoldo_1.06.46.jpeg" class="card-img-top" alt="Lettera di Mazzucchetti a Mondadori">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mazzucchetti_Mondadori_Lms.18</h5>
 				        <p class="card-text">
@@ -201,7 +201,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1947-04-09" data-author="mann">
-				      <img src="Img/Items/Arnoldo_Mann_9.04.47.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Arnoldo_Mann_9.04.47.jpeg" class="card-img-top" alt="Lettera di Mondadori a Mann">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Mann_Lds.11</h5>
 				        <p class="card-text">
@@ -218,7 +218,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1947-02-23" data-author="remarque">
-				      <img src="Img/Items/Remarque_Arnoldo_23.02.47.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Remarque_Arnoldo_23.02.47.jpeg" class="card-img-top" alt="Lettera di Remarque a Mondadori">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Remarque_Mondadori_Lds.01</h5>
 				        <p class="card-text">
@@ -235,7 +235,7 @@
 
 				  <div class="col">
 				    <div class="card h-100 shadow" data-date="1947-05-20" data-author="mann">
-				      <img src="Img/Items/Arnoldo_Mann_20.05.47.jpeg" class="card-img-top" alt="...">
+				      <img src="Img/Items/Arnoldo_Mann_20.05.47.jpeg" class="card-img-top" alt="Telegramma di Mondadori a Mann">
 				      <div class="card-body">
 				        <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Mann_TG.08</h5>
 				        <p class="card-text">
