--- a/archivio.html
+++ b/archivio.html
@@ -112,7 +112,7 @@
 			</div>
 			<div class="col-md-3">
 				<div class="card shadow" data-date="1946-10-30" data-author="buzzati">
-				    <img src="Img/Items/Arnoldo_Buzzati_30.10.46.jpeg" class="card-img-top" alt="...">
+				    <img src="Img/Items/Arnoldo_Buzzati_30.10.46.jpeg" class="card-img-top" alt="Lettera di Mondadori a Buzzati">
 				    <div class="card-body">
 				       <h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_Lds.01</h5>
 				       <p class="card-text">
