--- a/Item.html
+++ b/Item.html
@@ -169,7 +169,7 @@
 				<div class="col">
 					<h5>Potrebbe interessarti anche:</h5>
 					<div class="card shadow" data-date="1965-05-25" data-author="buzzati">
-						<img src="Img/Items/Arnoldo_Buzzati_25.05.65.jpeg" class="card-img-top" alt="...">
+						<img src="Img/Items/Arnoldo_Buzzati_25.05.65.jpeg" class="card-img-top" alt="Telegramma di Mondadori a Buzzati">
 						<div class="card-body">
 				        	<h5 class="card-title"><b>Codice item:</b> CA_Mondadori_Buzzati_TG.12</h5>
 				        	<p class="card-text">
